@@ -59,6 +59,7 @@ Fixed bugs
 - Enabled the solution limit checks in SCIPsolveIsStopped in solve.c when in SCIP_STAGE_PRESOLVING
 - Extended documentation of the parameter limits/solutions to point out that the limit is first checked in presolving
 - fix quad precision comparison for the calculation of knapsackcover constraints.
+- ensure that winner is always determined in concurrent mode
 
 Miscellaneous
 -------------
